--- a/azure-containers.adoc
+++ b/azure-containers.adoc
@@ -2,10 +2,11 @@
 :icons: font
 :source-highlighter: rouge
 :toc:
-:toclevels: 4
+:toclevels: 3
 :sectnums:
-:sectnumlevels: 4
+:sectnumlevels: 3
 
+<<<
 == Introduction
 Docker was initially developed for Linux and has expanded to support Windows. Individual Docker images are either Windows-based or Linux-based, but can't be both at the same time.
 
@@ -13,6 +14,425 @@ For example, Microsoft offers Windows and Linux Docker images containing an ASP.
 
 Linux computers with Docker installed can only run Linux containers. Windows computers with Docker installed can run both kinds of containers. Windows accomplishes this by using a virtual machine to run a Linux system and uses the virtual Linux system to run Linux containers.
 
+<<<
+== ACR
+=== Create an ACR — build images
+. Create a resource group if necessary
++
+[source, bash]
+----
+az group create \
+  --name [group_name] \
+  --location [location]
+----
++
+. Create an ACR of standard scalability and storage using the admin account
++
+[source, bash]
+----
+az acr create \
+  --name [registry_name] \
+  --resource-group [group_name] \
+  --sku standard \
+  --admin-enabled true
+----
++
+. Get registry password and username to login to the specified registry
++
+[source, bash]
+----
+az acr credential show \
+  --name [registry_name]
+----
++
+. Login to the private ACR (enter registry username and password)
++
+[source, bash]
+----
+docker login [registry_name].azurecr.io
+----
++
+. Create an alias for the image that specifies the repository and tag to be created in the Docker registry
++
+[source, bash]
+----
+docker tag [local_image_name:tag] [registry_name].azurecr.io/[local_image_name:tag]
+----
++
+. Check image with annotated tags
++
+[source, bash]
+----
+docker images
+----
++
+. Upload the specified image to the registry in the ACR
++
+[source, bash]
+----
+docker push [registry_name].azurecr.io/[local_image_name:tag]
+----
++
+. Query the repositories in the registry to confirm the image upload
++
+[source, bash]
+----
+az acr repository list \
+  --name [registry_name] <.>
+----
+<.> you can additionally specify the username (`--username [username]` and password `--password [password]`
++
+. List the images and their properties as JSON in the specified registry
++
+[source, bash]
+----
+az acr repository show \
+  --repository [repository_name] \
+  --name [registry_name]
+----
++
+. Cleanup resources if necessary with `az group delete --name [group_name]`
+
+[IMPORTANT]
+====
+Keep in mind that you'll have to create a **resource group before** you create the registry if no resource suitable group exists.
+
+The container registry name must be unique within Azure and contain between 5 and 50 alphanumeric characters.
+
+You'll see at least two tags for each image in a repository. One tag will be value you specified in the acr build command. The other will be latest. Every time you rebuild an image, ACR automatically creates the latest tag as an alias for the most recent version of the image.
+
+The name of the repo in the registry is equivalent to the name of the local image.
+====
+
+=== Manage ACR
+**Enable the admin account**
+[source, bash]
+----
+az acr update -n [registry_name] \
+  --admin-enabled true
+----
+
+**Get registry password and username to login to the specified registry**
+[source, bash]
+----
+az acr credential show \
+  --name [registry_name]
+----
+
+**Get registry password to login to the specified registry**
+[source, bash]
+----
+az acr credential show \
+  --name [registry_name] \
+  --query passwords[0].value
+----
+
+**Get the URL of the login-server**
+[source, bash]
+----
+az acr show \
+  --name [registry_name] \
+  --query loginServer
+----
+
+**Login to the login-server with the specified username and password**
+[source, bash]
+----
+docker login [registry_name].azurecr.io \
+  --username=[username] \
+  --password=[password]
+----
+
+**Show tags of the specified repo as text**
+[source, bash]
+----
+az acr repository show-tags \
+  --name [registry_name] \
+  --repository [repository_name] \
+  --username [username] \
+  --password [password] \
+  --output text
+----
+
+**Remove the resource group, the container registry, and the container images stored**
+[source, bash]
+----
+az group delete \
+  --name [group_name]
+----
+
+TIP: The **login-server URL** for a registry in Azure Container Registry has the form `[registry_name].azurecr.io`.
+
+=== Create a replicated region for ACR
+. Replicate the specified registry to another region
++
+[source, bash]
+----
+az acr replication create \
+  --registry [registry_name] \
+  --location [replicated_region]
+----
++
+. Show all container image replicas created
++
+[source, bash]
+----
+az acr replication list \
+  --registry [registry_name]
+  --output table
+----
+
+<<<
+== ACI
+=== Create an ACI — run containers
+. Create an ACI, which loads the image from the ACR, and run it in Azure
++
+[source, bash]
+----
+az container create \
+  --resource-group [group_name] \
+  --name [instance_name] \
+  --image [registry_name].azurecr.io/[image_name:latest] \
+  --dns-name-label [dns_name] \
+  --registry-username [username] \
+  --registry-password [password]
+----
++
+. Check running containers
++
+[source, bash]
+----
+docker ps
+----
++
+. Query the IP address of the instance to find the fully qualified domain name of the instance
++
+[source, bash]
+----
+az container show \
+  --resource-group [group_name] \
+  --name [instance_name] \
+  --query ipAddress.fqdn
+----
+
+[TIP]
+====
+The instance will be **allocated a public IP address**. You access the instance with this IP address. You can **optionally specify a DNS name** if you prefer to reference the instance through a more user-friendly label.
+
+The default port is 80 and the port protocol is TCP.
+====
+
+=== Manage containers
+==== Container lifecycle
+**Deploy a container inside the specified resource group with the specified properties**
+[source, bash]
+----
+az container create \
+  --resource-group [group_name] \
+  --name [instance_name] \
+  --image [full_image_name]\
+  --dns-name-label [dns_name] \
+  --cpu [1] \
+  --memory [1] \
+  --ip-address Public \
+  --location [location] \
+  --image-registry-login-server [login_server] \
+  --registry-username [username] \
+  --registry-password [password]
+----
+
+**Start the specified container**
+[source, bash]
+----
+az container start \
+  --resource-group [group_name] \
+  --name [instance_name]
+----
+
+**Stop the specified container**
+[source, bash]
+----
+az container stop \
+  --resource-group [group_name] \
+  --name [instance_name
+----
+
+**Restart the specified container**
+[source, bash]
+----
+az container restart \
+  --resource-group [group_name] \
+  --name [instance_name]
+----
+
+**Delete the specified container**
+[source, bash]
+----
+az container delete \
+  --resource-group [group_name] \
+  --name [instance_name]
+----
+
+==== Container information
+**List containers**
+[source, bash]
+----
+az container list
+----
+
+**List all containers in a resource group**
+[source, bash]
+----
+az container list \
+  --resource-group [group_name]
+----
+
+**List specified information of all containers in a resource group**
+[source, bash]
+----
+az container list \
+  --resource-group [group_name] \
+  --query value[].[name,provisioningState]
+----
+
+**Show the IP address and provisioning state of the specified container table-formatted**
+[source, bash]
+----
+az container show \
+  --resource-group [group_name] \
+  --name [instance_name] \
+  --query "{FQDN:ipAddress.fqdn,ProvisioningState:provisioningState}" --out table
+----
+
+**Query the IP address of the specified container instance**
+[source, bash]
+----
+az container show \
+  --resource-group [group_name] \
+  --name [instance_name] \
+  --query ipAddress.ip
+----
+
+**Show all details of the specified container (JSON)**
+[source, bash]
+----
+az container show \
+  --resource-group [group_name] \
+  --name [instance_name]
+----
+
+**List specified information of the specified container in a resource group**
+[source, bash]
+----
+az container show \
+  --resource-group [group_name] \
+  --name [instance_name] \
+  --query value[].[name,provisioningState]
+----
+
+==== Container stats
+**Show the logs of the specified container (JSON)**
+[source, bash]
+----
+az container logs \
+  --resource-group [group_name] \
+  --name [instance_name]
+----
+
+**Attach the local standard out and standard error streams to that of the container**
+[source, bash]
+----
+az container attach \
+  --resource-group [group_name] \
+  --name [instance_name]
+----
+
+NOTE: The container details is shown as JSON, specifying e.g. the operating
+
+<<<
+== AKS
+=== Integrate Azure containers with Kubernetes
+Deploy an ACI with Kubernetes as orchestrator
+
+. `az group create --name [group_name] --location [location]` — create a resource group if necessary
+. `az aks create --resource-group [group_name] --name [cluster_name] --node-count 1 --enable-addons monitoring --generate-ssh-keys` — create an AKS cluster
+. `az acs kubernetes install-cli` — install the Kubernetes CLI tool to manage the Kubernetes cluster **kubectl**
+. `az aks get-credentials --resource-group [group_name] --name [cluster_name]`
+Kubernetes cluster
+. `kubectl get nodes` —  verify the connection to your cluster (status must be ready)
+. `kubectl apply -f [kubernetes_yaml_file_name].yaml`— deploy the app and specify the name of your YAML manifest
+. `kubectl get service [service_name] --watch` — monitor the deployment process (stop the watch process when the EXTERNAL-IP address changes from pending to an actual public IP address)
+. `az group delete --name [group_name] --yes --no-wait` — delete the resource group and all resources it contains when the cluster is no longer needed
+
+'''
+_Intro video_
+
+. `az acs create --resource-group [group_name] --name [cluster_name] --dns-prefix [prefix] --generate-ssh-key --orchestrator-type kubernetes` — create a new container service
+. `az acs kubernetes install-cli` — install the Kubernetes CLI tool to manage the Kubernetes cluster **kubectl**
+. `az acs kubernetes get-credentials --resource-group [group_name] --name [cluster_name]` — get the credentials to configure kubectl to connect to your
+. `az ad sp create-for-rbac --role=Contributor --scopes /subscriptions/[subscription_id` — create a service principal
+. adjust content of yaml file to match service principal info (Azure client id, Azure client key, Azure tenant id, Azure subscription id, Azure resource group)
+. `kubectl create -f examples/aci-connector.yaml`— set up the ACI connector
+. create a Kubernetes manifest file
+
+*+Kubernetes manifest**
+[source, yaml, numbered]
+----
+# Example Kubernetes Manifest File
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: azure-vote-back
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: azure-vote-back
+    containers:
+      - name: azure-vote-back
+        image: mcr.microsoft.com/oss/bitnami/redis:6.0.8
+        imagePullPolicy: Always
+        env:
+        - name: ALLOW_EMPTY_PASSWORD
+          value: "yes"
+        - name: AZURE_CLIENT_ID
+-         value: id
+-       - name: AZURE_CLIENT_KEY
+-         value: key
+        - name: AZURE_TENANT_ID
+          value: id
+        - name: AZURE_SUBSCRIPTION_ID
+          value: id
+        - name: AZURE_RESOURCE_GROUP
+          value: group
+        resources:
+          requests:
+            cpu: 100m
+            memory: 128Mi
+          limits:
+            cpu: 250m
+            memory: 256Mi
+        ports:
+        - containerPort: 6379
+          name: redis
+----
+
+<<<
+== Manage Azure Account
+- `az login` — sign in to the Azure CLI
+- `az logout` — Log out to remove access to Azure subscriptions
+- `az account list -o table` — list Azure accounts table-formatted
+- `az version` — find the version and dependent libraries that are installed
+- `az upgrade` — upgrade to the latest version
+
+=== Environment variables
+[source, bash, numbered]
+----
+ACR_NAME=[registry_name] <.>
+----
+<.> referenced as `$ACR_NAME`
+
+<<<
 == Glossary
 Registry::
 A registry is a web service to which Docker can connect to upload and download container images. The most well-known registry is Docker Hub, which is a public registry.
@@ -48,88 +468,26 @@ Azure Kubernetes Service simplifies deploying a managed Kubernetes cluster in Az
 Resource Group::
 An Azure resource group is a logical container into which Azure resources are deployed and managed.
 
-== Create an ACR — build images
-. `az group create --name [group_name] --location [location]` create a resource group if necessary
-. `az acr create --name [registry_name] --resource-group [group_name] --sku standard --admin-enabled true` — create an ACR of standard scalability and storage
-. `az acr credential show --name [registry_name]` — get registry password and username to login to the specified registry
-. `docker login [registry_name].azurecr.io` — login to the private ACR (enter registry username and password)
-. `docker tag [local_image_name:tag] [registry_name].azurecr.io/[local_image_name:tag]` — create an alias for the image that specifies the repository and tag to be created in the Docker registry
-. `docker images` — check image with annotated tags
-. `docker push [registry_name].azurecr.io/[local_image_name:tag]` — upload the specified image to the registry in the ACR
-. `az acr repository list --name [registry_name]` — query the repositories in the registry to confirm the image upload (you can additionally specify the username (`--username [username]` and password `--password [password]`)
-. `az acr repository show --repository [repository_name] --name [registry_name]` — list the images and their properties as JSON in the specified registry
-. cleanup resources if necessary with `az group delete --name [group_name]`
+Azure Registry authentication::
+the recommended authentication method is Azure service principal. Access to a registry with an Azure Active Directory identity is role-based, and identities can be assigned one of three roles: **reader** (pull access only), **contributor** (push and pull access), or **owner** (pull, push, and assign roles to other users).
++
+The **admin account** included with each registry. The admin account is disabled by default.
++
+TIP: Only use the registry admin account for early testing and exploration, and do not share the username and password. Disable the admin account and use only role-based access with Azure Active Directory identities to maximize the security of your registry.
 
-[NOTE]
-====
-Keep in mind that you'll have to create a **resource group before** you create the registry
+Geo-replication::
+Geo-replication enables an Azure container registry to function as a single registry, serving several regions with multi-master regional registries.
++
+A geo-replicated registry provides the following benefits:
++
+- Single registry/image/tag names can be used across multiple regions
+- Network-close registry access from regional deployments
+- No additional egress fees, as images are pulled from a local, replicated registry in the same region as your container host
+- Single management of a registry across multiple regions
 
-You'll see at least two tags for each image in a repository. One tag will be value you specified in the acr build command. The other will be latest. Every time you rebuild an image, ACR automatically creates the latest tag as an alias for the most recent version of the image.
-
-The name of the repo in the registry is equivalent to the name of the local image.
-====
-
-== Manage ACR
-- `az acr credential show --name [registry_name]` — get registry password and username to login to the specified registry
-- `az acr credential show --name [registry_name] --query passwords[0].value` — get registry password to login to the specified registry
-- `az acr show --name [registry_name] --query loginServer` get the URL of the login-server
-- `docker login [registry_name].azurecr.io --username=[username] --password=[password]` — login to the login server with the specified username and password
-- `az acr repository show-tags --name [registry_name] --repository [repository_name] --username [username] --password [password] --output text` — show tags of the specified repo as text
-- `az group delete --name [group_name]` — remove the resource group, the container registry, and the container images stored
-
-NOTE: The **login server URL** for a registry in Azure Container Registry has the form [registry_name].azurecr.io.
-
-== Create an ACI — run containers
-. `az container create --resource-group [group_name] --name [instance_name] --image [registry_name].azurecr.io/[image_name:latest] --dns-name-label [dns_name] --registry-username [username] --registry-password [password]` — create an ACI, which loads the image from the ACR, and run it in Azure
-. `az container show --resource-group [group_name] --name [instance_name] --query ipAddress.fqdn` — query the IP address of the instance to find the fully qualified domain name of the instance
-
-[NOTE]
-====
-The instance will be **allocated a public IP address**. You access the instance with this IP address. You can **optionally specify a DNS name** if you prefer to reference the instance through a more user-friendly label.
-
-The default port is 80 and the port protocol is TCP.
-====
-
-== Manage containers
-- `az container create --resource-group [group_name] --name [instance_name] --image [full_image_name] --dns-name-label [dns_name] --cpu [1] --memory [1] --ip-address public --image-registry-login-server [login_server] --image-registry-username [username] --image-registry-password [password]` — deploy a container inside the specified resource group with the specified name, domain name, cpu, memory, ip address
-- `az container start --resource-group [group_name] --name [instance_name]` — start the specified container
-- `az container restart --resource-group [group_name] --name [instance_name]` — restart the specified container
-- `az container stop --resource-group [group_name] --name [instance_name]` — stop the specified container
-- `az container delete --resource-group [group_name] --name [instance_name]` — delete the specified container
-- `az container list` — list containers
-- `az container list --resource-group [group_name]` — list all containers in a resource group
-- `az container list --resource-group [group_name] --query value[].[name,provisioningState` — list specified information of all containers in a resource group
-- `az container show --resource-group [group_name] --name [instance_name] --query "{FQDN:ipAddress.fqdn,ProvisioningState:provisioningState}" --out table` — check container status
-- `az container show --resource-group [group_name] --name [instance_name]` — show details of the specified container (JSON)
-- `az container show --resource-group [group_name] --name [instance_name] --query value[].[name,provisioningState` — list specified information of the specified container in a resource group
-- `az container logs --resource-group [group_name] --name [instance_name]` — show the logs of the specified container (JSON)`
-- `az container attach --resource-group [group_name] --name [instance_name]` – attach the local standard out and standard error streams to that of the container
-
-NOTE: The container details is shown as JSON, specifying e.g. the operating system, the allocated memory, the number of CPUs (vcpu),
-
-== Integrate Azure containers with Kubernetes
-Deploy an ACI with Kubernetes as orchestrator
-
-. `az acs create --resource-group [group_name] --name [cluster_name] --dns-prefix [prefix] --generate-ssh-key --orchestrator-type kubernetes` — create a new container service
-. `az acs kubernetes install-cli` — install the Kubernetes CLI tool to manage the Kubernetes cluster **kubectl**
-. `az acs kubernetes get-credentials --resource-group [group_name] --name [cluster_name]` — get the credentials to configure kubectl to connect to your Kubernetes cluster
-. `kubectl get nodes` —  verify the connection to your cluster (status must be ready)
-
-'''
-
-. `az aks create --resource-group [group_name] --name [cluster_name] --node-count 1 --enable-addons monitoring --generate-ssh-keys` — create an AKS cluster
-. `az aks install-cli`
-. `az aks get-credentials --resource-group [group_name] --name [cluster_name]`
-
-== Manage Azure Account
-- `az login` — sign in to the Azure CLI
-- `az logout` — Log out to remove access to Azure subscriptions
-- `az account list -o table` — list Azure accounts table-formatted
-- `az version` — find the version and dependent libraries that are installed
-- `az upgrade` — upgrade to the latest version
-
+<<<
 == Resources
 - https://docs.microsoft.com/en-us/azure/container-registry/container-registry-get-started-azure-cli[Quickstart: Create a private container registry using the Azure CLI]
 - https://docs.microsoft.com/en-us/learn/modules/intro-to-containers/[Build a containerized web application with Docker]
+- https://docs.microsoft.com/en-us/learn/modules/build-and-store-container-images/[Build and store container images with Azure Container Registry]
 - https://docs.microsoft.com/en-us/azure/aks/kubernetes-walkthrough[Quickstart: Deploy an Azure Kubernetes Service cluster using the Azure CLI]
-
