--- a/azure-containers.adoc
+++ b/azure-containers.adoc
@@ -12,6 +12,7 @@ ifdef::env-github[]
 :warning-caption: :warning:
 :caution-caption: :fire:
 :important-caption: :exclamation:
+:source-highlighter: coderay
 endif::[]
 
 == Introduction
